starstream-to-wasm/tests/snapshots/inputs@effect_raise.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/effect_raise.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Abi(
                AbiDef {
                    name: Identifier {
                        name: "Foo",
                        span: 4..7,
                    },
                    parts: [
                        Effect(
                            EffectDef {
                                name: Identifier {
                                    name: "Hello",
                                    span: 21..26,
                                },
                                params: [],
                                return_type: None,
                                span: 14..34,
                            },
                        ),
                        Event(
                            EventDef {
                                name: Identifier {
                                    name: "Goodbye",
                                    span: 40..47,
                                },
                                params: [],
                                span: 34..51,
                            },
                        ),
                    ],
                },
            ),
            span: 0..54,
        },
        Spanned {
            node: Function(
                FunctionDef {
                    export: Some(
                        Script,
                    ),
                    name: Identifier {
                        name: "main",
                        span: 64..68,
                    },
                    params: [],
                    return_type: None,
                    body: Block {
                        statements: [
                            Spanned {
                                node: TryWith {
                                    subject: Block {
                                        statements: [
                                            Spanned {
                                                node: Expression(
                                                    Spanned {
                                                        node: Raise {
                                                            callee: Spanned {
                                                                node: ScopedName(
                                                                    [
                                                                        Identifier {
                                                                            name: "Hello",
                                                                            span: 97..102,
                                                                        },
                                                                    ],
                                                                ),
                                                                span: 97..102,
                                                            },
                                                            args: [],
                                                        },
                                                        span: 91..104,
                                                    },
                                                ),
                                                span: 91..110,
                                            },
                                        ],
                                        tail_expression: None,
                                        span: 80..112,
                                    },
                                    effects: [
                                        (
                                            [
                                                Identifier {
                                                    name: "Hello",
                                                    span: 117..122,
                                                },
                                            ],
                                            [],
                                            Block {
                                                statements: [
                                                    Spanned {
                                                        node: Expression(
                                                            Spanned {
                                                                node: Emit {
                                                                    callee: Spanned {
                                                                        node: ScopedName(
                                                                            [
                                                                                Identifier {
                                                                                    name: "Goodbye",
                                                                                    span: 140..147,
                                                                                },
                                                                            ],
                                                                        ),
                                                                        span: 140..147,
                                                                    },
                                                                    args: [],
                                                                },
                                                                span: 135..149,
                                                            },
                                                        ),
                                                        span: 135..155,
                                                    },
                                                ],
                                                tail_expression: None,
                                                span: 125..157,
                                            },
                                        ),
                                    ],
                                },
                                span: 77..157,
                            },
                        ],
                        tail_expression: None,
                        span: 71..159,
                    },
                },
            ),
            span: 54..159,
        },
    ],
}

==== Inference trace ====

T-Fn: main => ()
  T-TryWith: {main: fn() -> ()} ⊢ try {
    raise Hello();
} with Hello() {
    emit Goodbye();
} ⇒ 
    T-Expr: {main: fn() -> ()} ⊢ raise Hello(); ⇒ ()
      T-Call: {main: fn() -> ()} ⊢ raise Hello() ⇒ ()
        T-Var: {main: fn() -> ()} ⊢ Hello ⇒ effect() -> ()
    Unify-Const: () ~ () => {}
    T-Expr: {main: fn() -> ()} ⊢ emit Goodbye(); ⇒ ()
      T-Call: {main: fn() -> ()} ⊢ emit Goodbye() ⇒ ()
        T-Var: {main: fn() -> ()} ⊢ Goodbye ⇒ event() -> ()
    Unify-Const: () ~ () => {}

==== Typed AST ====
TypedProgram {
    definitions: [
        Abi(
            TypedAbiDef {
                name: Identifier {
                    name: "Foo",
                    span: 4..7,
                },
                parts: [
                    Effect(
                        TypedEffectDef {
                            name: Identifier {
                                name: "Hello",
                                span: 21..26,
                            },
                            id: NameId(4),
                            params: [],
                            return_type: Unit,
                        },
                    ),
                    Event(
                        TypedEventDef {
                            name: Identifier {
                                name: "Goodbye",
                                span: 40..47,
                            },
                            id: NameId(5),
                            params: [],
                        },
                    ),
                ],
            },
        ),
        Function(
            TypedFunctionDef {
                export: Some(
                    Script,
                ),
                name: Identifier {
                    name: "main",
                    span: 64..68,
                },
                id: NameId(6),
                params: [],
                return_type: Unit,
                body: TypedBlock {
                    statements: [
                        TryWith {
                            subject: TypedBlock {
                                statements: [
                                    Expression(
                                        Spanned {
                                            node: TypedExpr {
                                                ty: Unit,
                                                kind: Call {
                                                    callee: Spanned {
                                                        node: TypedExpr {
                                                            ty: Function(
                                                                FunctionType {
                                                                    kind: Raise,
                                                                    name_span: 21..26,
                                                                    params: [],
                                                                    param_spans: [],
                                                                    result: Unit,
                                                                    callee: Some(
                                                                        Named(
                                                                            NameId(4),
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            kind: ScopedName {
                                                                name: [
                                                                    Identifier {
                                                                        name: "Hello",
                                                                        span: 97..102,
                                                                    },
                                                                ],
                                                                constant: Some(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                        span: 97..102,
                                                    },
                                                    args: [],
                                                },
                                            },
                                            span: 97..102,
                                        },
                                    ),
                                ],
                                tail_expression: None,
                            },
                            effects: [
                                (
                                    [
                                        Identifier {
                                            name: "Hello",
                                            span: 117..122,
                                        },
                                    ],
                                    [],
                                    TypedBlock {
                                        statements: [
                                            Expression(
                                                Spanned {
                                                    node: TypedExpr {
                                                        ty: Unit,
                                                        kind: Call {
                                                            callee: Spanned {
                                                                node: TypedExpr {
                                                                    ty: Function(
                                                                        FunctionType {
                                                                            kind: Emit,
                                                                            name_span: 40..47,
                                                                            params: [],
                                                                            param_spans: [],
                                                                            result: Unit,
                                                                            callee: Some(
                                                                                Named(
                                                                                    NameId(5),
                                                                                ),
                                                                            ),
                                                                        },
                                                                    ),
                                                                    kind: ScopedName {
                                                                        name: [
                                                                            Identifier {
                                                                                name: "Goodbye",
                                                                                span: 140..147,
                                                                            },
                                                                        ],
                                                                        constant: Some(
                                                                            0,
                                                                        ),
                                                                    },
                                                                },
                                                                span: 140..147,
                                                            },
                                                            args: [],
                                                        },
                                                    },
                                                    span: 140..147,
                                                },
                                            ),
                                        ],
                                        tail_expression: None,
                                    },
                                ),
                            ],
                        },
                    ],
                    tail_expression: None,
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func))
  (import "starstream:effects/foo" "hello" (func (;0;) (type 0)))
  (import "starstream:events/foo" "goodbye" (func (;1;) (type 0)))
  (export "main" (func 2))
  (func (;2;) (type 0)
    (call 0)
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;) (func))
              (export (;0;) "main" (func (type 0)))
              (type (;1;)
                (instance
                  (type (;0;) (func))
                  (export (;0;) "hello" (func (type 0)))
                )
              )
              (import "starstream:effects/foo" (instance (;0;) (type 1)))
              (type (;2;)
                (instance
                  (type (;0;) (func))
                  (export (;0;) "goodbye" (func (type 0)))
                )
              )
              (import "starstream:events/foo" (instance (;1;) (type 2)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:effects/foo;
  import starstream:events/foo;

  export main: func();
}
package starstream:effects {
  interface foo {
    hello: func();
  }
}


package starstream:events {
  interface foo {
    goodbye: func();
  }
}
