starstream-to-wasm/tests/snapshots/inputs@enum_simple.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/enum_simple.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Enum(
                EnumDef {
                    name: Identifier {
                        name: "Message",
                        span: 5..12,
                    },
                    variants: [
                        EnumVariant {
                            name: Identifier {
                                name: "Ping",
                                span: 19..23,
                            },
                            payload: Unit,
                            span: 19..23,
                        },
                        EnumVariant {
                            name: Identifier {
                                name: "Pong",
                                span: 29..33,
                            },
                            payload: Tuple(
                                [
                                    Named {
                                        name: [
                                            Identifier {
                                                name: "i64",
                                                span: 34..37,
                                            },
                                        ],
                                        generics: [],
                                    },
                                ],
                            ),
                            span: 29..38,
                        },
                    ],
                },
            ),
            span: 0..42,
        },
    ],
}

==== Inference trace ====

==== Typed AST ====
TypedProgram {
    definitions: [
        Enum(
            TypedEnumDef {
                ty: EnumType {
                    name: Identifier {
                        name: "Message",
                        span: 5..12,
                    },
                    variants: [
                        EnumVariantType {
                            name: Identifier {
                                name: "Ping",
                                span: 19..23,
                            },
                            kind: Unit,
                        },
                        EnumVariantType {
                            name: Identifier {
                                name: "Pong",
                                span: 29..33,
                            },
                            kind: Tuple(
                                [
                                    Int(
                                        I64,
                                    ),
                                ],
                            ),
                        },
                    ],
                    type_args: [],
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i64 i64 i64 i64) (result i32)))
  (import "starstream:std/builtin" "[resource-drop]utxo" (func (;0;) (type 0)))
  (import "starstream:std/builtin" "[method]utxo.has-method" (func (;1;) (type 1)))
  (import "starstream:std/builtin" "[resource-drop]token" (func (;2;) (type 0)))
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (tuple u64 u64 u64 u64))
                  (type (;4;) (func (param "self" 1) (param "hash" 3) (result bool)))
                  (export (;0;) "[method]utxo.has-method" (func (type 4)))
                  (export (;5;) "token" (type (sub resource)))
                  (type (;6;) (borrow 5))
                  (type (;7;) (own 5))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;) (tuple s64))
              (type (;10;) (variant (case "ping") (case "pong" 9)))
              (import "message" (type (;11;) (eq 10)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};

  variant message {
    ping,
    pong(tuple<s64>),
  }
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
}
